# learnings

./: .gitignore  pyproject.toml
learnings/: first.py  functions.py  largest.py  listcomprehension.py  lists.py  main.py  tuples.py
newtest/: 5.2.py  banana.py  check.py  dictionaries.py  generators.py  sets.py
oop/: dundermethods.py  main.py  oop1.py
tests/: test_learnings.py
